fix: csrf tocken issue solved

--- a/codecampus/www/index.html
+++ b/codecampus/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeSpace - Online IDE</title>
     <link rel="stylesheet" href="/assets/codecampus/css/stylee.css">
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <nav class="navbar">
@@ -41,6 +42,11 @@
         </div>
     </main>
 </body>
+<script>
+    console.log("Hi")
+    // console.log("'{{ frappe.session.csrf_token }}'")
+    window.csrf_token = '{{ frappe.session.csrf_token }}'
+</script>
 <!--http://codecampus.local:8000/-->
 </html>
 
