--- a/codecampus/www/registerr.html
+++ b/codecampus/www/registerr.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - CodeSpace</title>
     <link rel="stylesheet" href="/assets/codecampus/css/styles.css">
-
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <nav class="navbar">
@@ -54,6 +54,10 @@
             </div>
         </form>
     </div>
+
+    <script>
+        window.csrf_token = '{{ frappe.session.csrf_token }}'
+    </script>
 
     <script src="/assets/codecampus/js/script.js"></script>
 </body>
